--- a/angular.json
+++ b/angular.json
@@ -24,6 +24,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css",
               "src/sb-kisan.css"
             ],
@@ -85,6 +86,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css",
               "src/sb-kisan.css"
             ],
@@ -117,6 +119,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "kisan-webapp"
 }
